--- a/mpc19/slides/slides-mpc19.tex
+++ b/mpc19/slides/slides-mpc19.tex
@@ -128,7 +128,8 @@
   Delay Monad}
 
 
-\author{Robin Kaarsgaard \and \underline{Niccol\`o Veltri}}
+\author{Robin Kaarsgaard \inst{1} \and \underline{Niccol\`o Veltri} \inst{2}}
+\institute{\inst{1} University of Copenhagen \and \inst{2} Tallinn University of Technology}
 \date{MPC'19, Porto, 09 October 2019}
 
 \begin{frame}
@@ -271,8 +272,10 @@
 \end{frame}
 
 %\setbeamertemplate{section in toc}[ball unnumbered]
-\begin{frame}{Overview}
-
+\begin{frame}[c]
+  \begin{center}
+    \Huge \Pio\ syntax
+  \end{center}
 \end{frame}
 
 
@@ -373,7 +376,7 @@
 
     \vspace{\fill}
   \item Altogether, the term equivalences correpond to the axioms of
-    dagger-traced $\omega$-continuous rig categories [Karvonen'19].
+    dagger-traced $\omega$-continuous rig groupoids [Karvonen'19].
     \end{itemize}
 \end{frame}
 
@@ -396,6 +399,11 @@
   \end{itemize}
 \end{frame}
 
+\begin{frame}[c]
+  \begin{center}
+    \Huge The delay datatype
+  \end{center}
+\end{frame}
 
 \begin{frame}
 
@@ -554,6 +562,12 @@
   \end{itemize}
   
   
+\end{frame}
+
+\begin{frame}[c]
+  \begin{center}
+    \Huge Dagger trace in $\Inv\Dapprox$ 
+  \end{center}
 \end{frame}
 
 \begin{frame}
