inv cat instead of groupoids

--- a/mpc19/slides/slides-mpc19.tex
+++ b/mpc19/slides/slides-mpc19.tex
@@ -376,7 +376,7 @@
 
     \vspace{\fill}
   \item Altogether, the term equivalences correpond to the axioms of
-    dagger-traced $\omega$-continuous rig groupoids [Karvonen'19].
+    dagger-traced $\omega$-continuous rig inverse categories [Karvonen'19].
     \end{itemize}
 \end{frame}
 
