--- a/mpc19/slides/slides-mpc19.tex
+++ b/mpc19/slides/slides-mpc19.tex
@@ -722,6 +722,8 @@ i.e. partial isomorphisms:
     \item Alternative type-theoretical models can be constructed using
       the partiality monad [Altenkirch et al.'17] or the partial map
       classifier [Escardó and Knapp'17].
+    \item Conjecture: a model for each $\omega$-continuous
+      monad on $\Set$, that can hopefully be ported to other categories. 
     \item Future work: The (unquotiented) delay monad can also be used for
       semantics of time-reversible computations.
       
